# covid_countdown

./: .env  Cargo.toml  database.sql
migrations/2020-04-22-193141_initialize/: up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
static/: index.html
static/scripts/: main.js
