[package]
name = "covid_countdown"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1", features = ["sqlite", "r2d2", "chrono"] }
r2d2 = "0.8"
serde =  { version = "1", features = ["derive"] }
